fixes bug 223145 "Numeric IPv6 addresses don't work" patch=lorenzo@colitti.com r+sr=darin